tests/mocks/success/initializers/app.js
'use strict';
let App = require('esrol-server-app');
let path = require('path');
new App(path.join(__dirname, 'app'));
