tests/mocks/fail/missing-tcp-index-socket/app.js
'use strict';
let App = require('../../../../index');
let path = require('path');
new App(path.join(__dirname, 'app'));
